--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">Mann Sign App</string>
     <string name="email">email</string>
     <string name="password">password</string>
-    <string name="login">Login</string>
+    <string name="login">Sign In</string>
     <string name="title_activity_authentication">Authentication</string>
     <string name="register">Register</string>
     <string name="resetPWtxt">Enter your registered email we will send \nyou a link for reset password</string>
