--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="register">Register</string>
     <string name="resetPWtxt">Enter your registered email we will send \nyou a link for reset password</string>
     <string name="generalErrorMsg">Something went wrong</string>
+    <string name="go_to_cart">Go to cart</string>
+    <string name="selected_variant_price">Selected variant price: ₹</string>
 </resources>
