Added Rupee sign in String resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="go_to_cart">Go to cart</string>
     <string name="selected_variant_price">Selected variant price: ₹</string>
     <string name="add_to_cart">Add to Cart</string>
+
+    <string name="rupee_sign">₹ </string>
 </resources>
