--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="hello_blank_fragment">Its a Blank frag</string>
-    <string name="app_name">Mann Sign App</string>
+    <string name="app_name">Mann Sign</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="login">Sign In</string>
