Added Payment Success and Failure screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="don_t_worry_if_your_account_got_debited_n_we_will_process_a_refund_for_you_withing_3_4_days">Don\'t worry if your account got debited,\n we will process a refund for you withing 3-4 days</string>
 </resources>
